# hello-shared-lib

./: CMakeLists.txt  README.md
include/: hello_shared_lib.h
src/: hello_shared_lib.cpp
